# Open-Vehicle-Monitoring-System-3

./: .gitignore  .gitmodules  .project  .readthedocs.yaml  .travis.yml  CLAUDE.md  LICENSE  OVMS v3 Developer Guide.md  PROJECT.md  README.md  TODO-clima-capture.md  TODO-metrics.md  UPSTREAM_ISSUE_mcp2515_filter.md  changes.txt  readthedocs.yml
vehicle/OVMS.V3/components/can/: CMakeLists.txt  can.cpp  can.h  canlog.cpp  component.mk
vehicle/OVMS.V3/components/can/src/: can.cpp  can.h  candump.cpp  candump.h  candump_crtd.cpp  candump_crtd.h  candump_pcap.cpp  candump_pcap.h  canformat.cpp  canformat.h  canformat_canswitch.cpp  canformat_canswitch.h  canformat_crtd.cpp  canformat_crtd.h  canformat_gvret.cpp  canformat_gvret.h  canformat_lawicel.cpp  canformat_lawicel.h  canformat_lawricel.cpp  canformat_lawricel.h  canformat_panda.cpp  canformat_panda.h  canformat_pcap.cpp  canformat_pcap.h  canformat_raw.cpp  canformat_raw.h  canlog.cpp  canlog.h  canlog_monitor.cpp  canlog_monitor.h  canlog_tcpclient.cpp  canlog_tcpclient.h  canlog_tcpserver.cpp  canlog_tcpserver.h  canlog_udpclient.cpp  canlog_udpclient.h  canlog_udpserver.cpp  canlog_udpserver.h  canlog_vfs.cpp  canlog_vfs.h  (+6 more)
vehicle/OVMS.V3/components/canopen/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/canopen/doc/: Commands.txt  Howto-detect-CANopen-nodes.txt  Test-Frames.txt  Test-Session-1.txt  Usage.cpp
vehicle/OVMS.V3/components/canopen/docs/: API.rst  Commands.rst  Commands.txt  Howto-detect-CANopen-nodes.rst  Howto-detect-CANopen-nodes.txt  Intro.rst  Test-Frames.txt  index.rst
vehicle/OVMS.V3/components/canopen/src/: canopen.cpp  canopen.h  canopen_client.cpp  canopen_shell.cpp  canopen_worker.cpp
vehicle/OVMS.V3/components/console_ssh/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/console_ssh/src/: console_ssh.cpp  console_ssh.h
vehicle/OVMS.V3/components/console_telnet/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/console_telnet/src/: console_telnet.cpp  console_telnet.h
vehicle/OVMS.V3/components/crypto/: CMakeLists.txt  component.mk  crypt_base64.cpp  crypt_base64.h  crypt_crc.cpp  crypt_crc.h  crypt_hmac.cpp  crypt_hmac.h  crypt_md5.cpp  crypt_md5.h  crypt_rc4.cpp  crypt_rc4.h
vehicle/OVMS.V3/components/dbc/: .gitignore  CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/dbc/src/: dbc.cpp  dbc.h  dbc_app.cpp  dbc_app.h  dbc_number.cpp  dbc_number.h  dbc_parser.y  dbc_tokeniser.l
vehicle/OVMS.V3/components/dbc/yacclex/: readme.txt
vehicle/OVMS.V3/components/duktape/: CMakeLists.txt  Makefile.sharedlibrary  README.rst  component.mk  duk_dist_meta.json  license.spdx
vehicle/OVMS.V3/components/duktape/debugger/: duk_debug_meta.json  package.json
vehicle/OVMS.V3/components/duktape/src/: duk_config.h  duk_source_meta.json  duktape.c  duktape.h
vehicle/OVMS.V3/components/duktape/src-noline/: duk_source_meta.json  duktape.c  duktape.h
vehicle/OVMS.V3/components/duktape/src-separate/: duk_builtins.c  duk_builtins.h  duk_config.h  duk_source_meta.json  duk_unicode.h  duk_unicode_tables.c  duktape.h
vehicle/OVMS.V3/components/duktape/stub/: duktape.h
vehicle/OVMS.V3/components/esp32adc/: CMakeLists.txt  component.mk  esp32adc.cpp  esp32adc.h
vehicle/OVMS.V3/components/esp32adc/src/: esp32adc.h
vehicle/OVMS.V3/components/esp32bluetooth/: CMakeLists.txt  component.mk  esp32bluetooth.cpp  esp32bluetooth.h
vehicle/OVMS.V3/components/esp32bluetooth/src/: esp32bluetooth.cpp  esp32bluetooth.h  esp32bluetooth_app_console.cpp  esp32bluetooth_app_console.h  esp32bluetooth_app_device.cpp  esp32bluetooth_app_device.h  esp32bluetooth_app_metrics.cpp  (+13 more)
vehicle/OVMS.V3/components/esp32can/: CMakeLists.txt  Kconfig  component.mk  esp32can.cpp  esp32can.h
vehicle/OVMS.V3/components/ext12v/: CMakeLists.txt  component.mk  ext12v.cpp  ext12v.h
vehicle/OVMS.V3/components/mcp2515/: CMakeLists.txt  component.mk  mcp2515.cpp  mcp2515.h
vehicle/OVMS.V3/components/mongoose/: CMakeLists.txt  Makefile.projbuild  component.mk  mg_version.h.in  project_include.cmake
vehicle/OVMS.V3/components/ovms_cellular/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/ovms_netlib/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/ovms_plugins/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/ovms_script/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/ovms_server/: CMakeLists.txt  component.mk  ovms_server.cpp  ovms_server.h
vehicle/OVMS.V3/components/ovms_tls/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/ovms_tpms/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/ovms_webserver/: .gitignore  CMakeLists.txt  component.mk  helper.sh
vehicle/OVMS.V3/components/poller/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/retools_pidscan/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/retools_testerpresent/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/simcom/: CMakeLists.txt  component.mk  simcom.cpp  simcom.h
vehicle/OVMS.V3/components/strverscmp/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/vehicle/: CMakeLists.txt  vehicle.cpp  vehicle.h  vehicle_bms.cpp  vehicle_common.h  vehicle_duktape.cpp  vehicle_poller.cpp  vehicle_poller.h  vehicle_poller_isotp.cpp  vehicle_poller_vwtp.cpp  vehicle_shell.cpp
vehicle/OVMS.V3/components/vehicle_bmwi3/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/vehicle_boltev/: CMakeLists.txt  component.mk
vehicle/OVMS.V3/main/: CMakeLists.txt  Kconfig  background_shell.cpp  background_shell.h  buffered_shell.cpp  buffered_shell.h  command.cpp  command.h  component.mk  config.cpp  config.h  console.cpp  console.h  console_async.cpp  console_async.h  console_telnet.cpp  console_telnet.h  event.cpp  event.h  file_writer.cpp  file_writer.h  glob_match.cpp  glob_match.h  housekeeping.cpp  housekeeping.h  idf_component.yml  log_buffers.cpp  log_buffers.h  metrics.cpp  metrics.h  metrics_standard.cpp  metrics_standard.h  ota.cpp  ovms.cpp  ovms.h  ovms_bms.cpp  ovms_bms.h  ovms_boot.cpp  ovms_boot.h  ovms_boot.ld  (+79 more)
(+1468 files in other folders)
